--- a/_components/buttons.html
+++ b/_components/buttons.html
@@ -1,5 +1,5 @@
 ---
-title: "Block Level Buttons are poop"
+title: "Block Level Buttons are lovely"
 type: component
 layout: component
 scss: _assets/stylesheets/_buttons.scss
