this works. about to bundle

--- a/_components/buttons.html
+++ b/_components/buttons.html
@@ -6,5 +6,5 @@ scss: _assets/stylesheets/_buttons.scss
 usage: "Buttons that span the width of their parent container."
 ---
 
-<a href="#" class="btn btn--block">Block Level Button</a>
-<button class="btn btn--block">View Comments</button>
+<a href="#" class="btn">Block Level Button</a>
+<button class="btn btn-primary">View Comments</button>
