bodging svg into place

--- a/_components/buttons.html
+++ b/_components/buttons.html
@@ -1,10 +1,12 @@
 ---
-title: "Block Level Buttons are lovely"
+title: "Buttons"
 type: component
 layout: component
-scss: _assets/stylesheets/_buttons.scss
-usage: "Buttons that span the width of their parent container."
+usage: "Buttons can be added to a or button tags. "
 ---
 
-<a href="#" class="btn">Block Level Button</a>
-<button class="btn btn-primary">View Comments</button>
+<button class="btn">.btn</button>
+<button class="btn btn-primary">.btn-primary</button>
+<button class="btn btn-secondary">.btn-secondary</button>
+<button class="btn btn-ghost">.btn-ghost</button>
+<button class="btn btn-block">.btn-block</button>
